- Fixed crash when zooming in snap-mode
- Added context menu to spectra selection bar
- Several minor fixes and improvements

Main improvements of TOPP:
- Made mzML 1.1.0 the default format for all TOPP tools
- Added data processing information to all output files to improve tracability
- FileFilter: added 'sort_peaks' option
- FileInfo: 
  - added flag for data processing output
  - corrupt data checks: sorting is checked now and improved speed
- Added new tool IDFileConverter, which can convert between identification file formats

Main improvements of OpenMS C++ library:
- mzML 1.1.0 support

Changes to OpenMS XML formats:

Detailed list of changes to specific OpenMS classes
- New classes
- Removed classes
  - FeatureFinderAlgorithmWatershed
  - PeakIcon
  - FactoryProduct (replaced by DefaultParamHandler)
  - DSpectrum (all the functionalty was moved to MSSpectrum)
- Renamed and moved classes
  - Moved PersistentObject from FORMAT/ to FORMAT/DB/
  - Renamed PepXMLFile to PepXMLFileMascot
- Changes to Classes
	- MSExperiment: added 'isSorted' method
	- MSSpectrum
	  - added 'isSorted' method
	  - renamed MetaDataArray to FloatDataArray
	  - added StringDataArray
  - DataValue: added constructor for std::string and QString
  - MetaInfo: setValue method takes only DataValue now
  - MetaInfoInterface: setMetaValue method takes only DataValue now
  - Param: setValue method takes only DataValue now
  - ExperimentalSettings: Moved DataProcessing to SpectrumSettings (for mzML)
  - Precursor: supports multiple dissociation methods now (for mzML)
  - MetaInfoDescription: removed comment and source file; added data processing (for MzML)
	- ElementDB: Isotopes are now possible
	- EmpiricalFormula: Isotopes are now possible (e.g. (2)HO for deuterium)
	- PepXMLFile: added new load method (moved the old load method to PepXMLFileMascot)
  - TextFile
    - is now derived from StringList
    - the asString() method was replaced by concatenate() from StringList
